fix dex ui on mobile

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h2 {
 }
 
 .sfDexItem:hover .label,
-.sfDexItem:active .label {
+.sfDexItem:focus .label {
   opacity: 1;
 }
 
